youtube-style/sidebar.css
@media(max-width: 1200px){
  .sidebar{
    position: fixed;
    left: 0;
    bottom: 0;
    top: 55px;
    background-color: white;
    width: 72px;
    z-index: 200;
    padding-top: 5px;
  }
  .link{
    height: 74px;
    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: column;
    cursor: pointer;
  
  }
  .link:hover{
    background-color: rgb(235, 235, 235);
  }
  .link img{
    height: 24px;
    margin-bottom: 4px;
    
  }
  .link div{
    font-size: 10px;
  
  }
  
}





@media (min-width: 1200.1px) {
  .sidebar {
    position: fixed;
    left: 0;
    bottom: 0;
    top: 55px;
    background-color: white;
    width: 240px;
    z-index: 200;
    padding-top: 13px;
  }

  .link {
    display: flex;
    align-items: center;
    justify-self: right ;
    cursor: pointer;
    padding: 8px 24px;
  }

  .link:hover {
    background-color: rgb(235, 235, 235);
  }

  .link img {
    height: 24px;
    margin-right: 24px;
  }

  .link div {
    font-family: Roboto, Arial;
    font-size: 14px;
  }
}

